# red-sample-pkg

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.ci.txt  requirements.dev.txt  requirements.txt
.github/workflows/: build.yml  export-requirements.yml  pdm-lint-format.yml
src/: config.py
src/config/db/: settings.toml
src/core/: __init__.py  config.py
src/sample_pkg/: __init__.py  __main__.py  main.py
