[project]
name = "red-sample-pkg"
version = "0.1.0"
description = "A sample Python package, for testing automations & project structures. Don't install/use this, please, no effort at all was put into making this useful/secure."
authors = [{ name = "redjax", email = "stupidjunkstuff@protonmail.com" }]
dependencies = [
    "red-utils>=0.2.12",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "pandas>=2.1.4",
    "fastparquet>=2023.10.1",
    "msgpack>=1.0.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["black>=23.11.0", "ruff>=0.1.7", "pre-commit>=3.6.0"]

[tool.pdm.scripts]

###############
# Format/Lint #
###############

lint = { shell = "pdm run black . && pdm run ruff check . --fix" }
check = { cmd = "black ." }
format = { cmd = "ruff check . --fix" }

########################
# Start/Launch Scripts #
########################

#  Run main app or script. Launches from app/
start = { shell = "cd src && pdm run python sample_pkg" }

######################
# Export Requirement #
######################

#  Export production requirements
export = { cmd = "pdm export --prod -o requirements.txt --without-hashes" }
#  Export only development requirements
export-dev = { cmd = "pdm export -d -o requirements.dev.txt --without-hashes" }
## Uncomment if/when using a CI group
export-ci = { cmd = "pdm export --group ci -o requirements.ci.txt --without-hashes" }
